# carbon-txt-download-disclosures

./: .gitignore  README.md  justfile  pyproject.toml
github/workflows/: ci.yml
src/carbon_txt_download_disclosures/: __init__.py
tests/: test_download_disclosures.py
