[project]
name = "carbon-txt-download-disclosures"
version = "0.0.1"
description = "A carbon.txt plugin to download linked disclosures in a carbon.txt file"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "carbon-txt>=0.0.12",
    "ipdb>=0.13.13",
    "pytest-django>=4.9.0",
    "pytest-watch>=4.2.0",
    "pytest>=8.3.4",
]

[project.scripts]
carbon-txt-download-disclosures = "carbon_txt_download_disclosures:main"

[project.entry-points.carbon_txt]
download_disclosures = "carbon_txt_download_disclosures"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
