[project]
name = "carbon-txt-download-disclosures"
version = "0.0.1"
description = "A carbon.txt plugin to download linked disclosures in a carbon.txt file"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["carbon-txt"]

[project.optional-dependencies]
test = ["ipdb", "pytest-django", "pytest-watch", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.carbon_txt]
download_disclosures = "carbon_txt_download_disclosures"
